# citywalker_orad

./: .gitignore  benchmark_citywalker_feat_infer.py  benchmark_citywalker_feat_trt.py  export_dinov2_backbone_onnx.py  fine_tune.py  offroad_dataset  test.py  train.py
config/: offroad_finetune.yaml  offroad_finetune_ORAD_only.yaml  offroad_finetune_collect_only.yaml  offroad_test.yaml  test.yaml
data/: offroad_dataset.py  teleop_dataset.py
model/: citywalker_feat.py
pl_modules/: citywalker_feat_module.py  citywalker_module.py  offroad_datamodule.py
ros/citywalker_ros/: CMakeLists.txt  README.md  package.xml  setup.py
ros/citywalker_ros/config/: deploy_offroad.yaml  sample_path.csv
ros/citywalker_ros/launch/: citywalker_deploy.launch  citywalker_visualization.launch  record_path.launch
ros/citywalker_ros/msg/: HistoryBundle.msg
ros/citywalker_ros/scripts/: citywalker_visualization_node.py  global_path_node.py  history_buffer_node.py  inference_node.py  inference_node_conda.py  inference_node_conda.sh  path_recorder_node.py  waypoint_follower_node.py
ros/citywalker_ros/src/citywalker_ros/: __init__.py  geometry.py  trt_model.py
utils/: visualize_offroad_dataset.py  visualize_offroad_sequence.py
